--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Estamos haciendo el ejercicio1 hoy en la noche del 27</h1>
-    <p>Practicando</p>
+    <p>Practicando y viendo la clase</p>
     
 </body>
 </html>
