--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 </head>
 <body>
     <h1>Estamos haciendo el ejercicio1 hoy en la noche del 27</h1>
-    <p>Clase vista, a punto de terminar</p>
-    
+    <p>Clase vista y terminada</p>
 </body>
 </html>
